--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 리몬늘보 블로그
 description: Blog
 baseurl: ""
-url: "https://lemonsloth.github.io"
+url: "https://Nara-Shin.github.io"
 
 # Build settings
 markdown: kramdown
